--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,62 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>PDF yüklemek için fotoğraf kitaplığınıza erişime ihtiyacımız var</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Kamera ile çekilen PDF belgeleri yüklemek için erişime ihtiyacımız var</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Ses kaydı oluşturabilmek için mikrofon erişimine ihtiyacımız var</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>UniNote yerel dosyalara erişmek ve sunucu ile iletişim kurmak için yerel ağ kullanıyor</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_uninote._tcp</string>
+	</array>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>PDF Document</string>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.adobe.pdf</string>
+			</array>
+		</dict>
+	</array>
+
+	<!-- Davet bağlantıları için URL şema tanımları -->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.example.uninote</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>uninote</string>
+			</array>
+		</dict>
+	</array>
+	
+	<!-- Universal Links için yapılandırma -->
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:uninotes.com</string>
+	</array>
 </dict>
 </plist>
