--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,21 @@ dependencies:
   provider: ^6.1.2
   dio: ^5.8.0+1
   intl: ^0.20.2
-  flutter_form_builder: ^10.0.1
   equatable: ^2.0.5
   dartz: ^0.10.1
   json_annotation: ^4.8.1
+  
+  # PDF işleme için eklenen paketler
+  file_picker: ^8.1.1                     # Dosya seçme
+  path_provider: ^2.1.4                   # Dosya yolu işlemleri
+  open_file: ^3.4.0                       # Dosya açma
+  permission_handler: ^11.3.1             # İzin yönetimi
+  flutter_markdown: ^0.7.1                # Markdown desteği
+  flutter_form_builder: ^10.0.1
+  syncfusion_flutter_pdfviewer: ^29.1.37
+  
+  # Deep Link yönetimi için
+  uni_links: ^0.5.1                      # Deep Link yakalama
 
 dev_dependencies:
   flutter_test:
@@ -71,9 +82,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
