--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   flutter_markdown: ^0.7.1                # Markdown desteği
   flutter_form_builder: ^10.0.1
   syncfusion_flutter_pdfviewer: ^29.1.37
-  
+  flutter_pdfview: ^1.4.0
   # Deep Link yönetimi için
   uni_links: ^0.5.1                      # Deep Link yakalama
 
